add hint for build with java 17